--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "sarthak",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
