--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^6.1.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "parcel": "^2.12.0",
